--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-hooks": "^5.1.1",
     "@types/jest": "^26.0.22",
     "@types/react-native": "^0.64.0",
     "@types/react-test-renderer": "^16.9.2",
