--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.64.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-ionicons": "^4.x",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
