--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.9.4",
     "@types/styled-components": "^5.1.9",
     "@types/styled-components-react-native": "^5.1.1",
+    "lottie-react-native": "^3.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-easy-grid": "^0.2.2",
