--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+          storeFile file('fyfirman.keystore')
+          storePassword System.console().readLine("\nKeystore password:")
+          keyAlias System.console().readLine("\nAlias: ")
+          keyPassword System.console().readLine("\nAlias password: ")
+        }
     }
     buildTypes {
         debug {
@@ -160,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
