--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
   "resolutions": {
@@ -65,7 +67,11 @@
       "json",
       "node"
     ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-splash-screen)/)"
+    ],
     "moduleNameMapper": {
+      "@test/(.*)$": "<rootDir>/src/__test__/$1",
       "@assets/(.*)$": "<rootDir>/src/assets/$1",
       "@components/(.*)$": "<rootDir>/src/components/$1",
       "@constants/(.*)$": "<rootDir>/src/constants/$1",
